--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div id="menu">
             <ul>
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">CV</a></li>
+                <li><a href="CV.html">CV</a></li>
                 <li><a href="#">Careers</a></li>
                 <li><a href="#">Contact Me</a></li>
             </ul>
